Fix Layout Problem

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -7,7 +7,7 @@
 }
 
 .narrow {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: auto !important;
+  margin-right: auto !important;
   max-width: 1400px;
 }
